--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "id-contact-sentry"
+name = "verder-helpen-sentry"
 version = "0.1.0"
 edition = "2018"
 
@@ -7,6 +7,6 @@ edition = "2018"
 
 [dependencies]
 env_logger = "0.9.0"
-sentry = "0.23.0"
-log = "0.4.14"
-rocket = "0.5.0-rc.1"
+sentry = "0.26.0"
+log = "0.4.17"
+rocket = "0.5.0-rc.2"
